# counting-rota

./: .gitignore  Dating.hs  Loading.hs  Parsing.hs  Planning.hs  Presenting.hs  README.md  Requirements.hs  Scoring.hs  Set.hs  counting-rota.cabal  example.rota  rota.hs  test.hs
