build-type: Simple
cabal-version: >= 1.2
name: counting-rota
version: 0.1.0.0
executable rota
    main-is: rota.hs
    build-depends: base
    build-depends: old-locale
    build-depends: split
    build-depends: time
executable test
    main-is: test.hs
    build-depends: base
    build-depends: split
    build-depends: tasty
    build-depends: tasty-hunit
